--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ Module_Challenge_config.py
 # Adding other files
 API_practice.ipynb
 random_numbers.ipynb
+Google_Nearby_Search.ipynb
+
+# Adding unnecessary file
+weather_data/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
